# check-phat-nguoi

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  .whitesource  README.md  config.json  config.sample.json  config.yml  jsfh-conf.yaml  justfile  main.py  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  ruff.toml
.github/workflows/: codeql.yml  deploy-website.yml  gen-schemas-website.yml  pre-commit.yml  schedule-run.yml  sematic-release.yml
assets/sites/csgt.vn/: source.html
docs/: disclaimer.md  index.md  references.md  run-schedule.md  usage.md
docs/dev/: checkphatnguoi_vn.md  csgt_vn.md  phatnguoi_vn.md  setup.md
docs/sample-config/: advanced.config.json
docs/usage/: index.md  setup-config.md  usage.md
docs/usage/advanced/: schedule-run.md
docs/usage/from-source/: pip.md  uv-just.md  uv.md
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md
requests/: checkphatnguoi_vn.http  csgt_vn.http  phatnguoi_vn.http
requirements/: requirements-build-website.txt  requirements-dev.txt  requirements.txt
schemas/: config.json
src/check_phat_nguoi/: __init__.py  __main__.py  config_reader.py
src/check_phat_nguoi/config/: __init__.py  config.py  config_reader.py
src/check_phat_nguoi/constants/: __init__.py  get_data.py  notifications.py
src/check_phat_nguoi/context/: __init__.py  context.py  plates_context.py
src/check_phat_nguoi/enums/: __init__.py  log_level.py  vehicle_type.py
src/check_phat_nguoi/get_data/: __init__.py  check_phat_nguoi.py  engine_base.py  engine_check_phat_nguoi.py  get_data.py  get_data_base.py
src/check_phat_nguoi/models/: config.py  plate_info.py  telegram.py
src/check_phat_nguoi/modules/: __init__.py  config_reader.py  get_data.py  logger.py  setup_logger.py
src/cpn_cli/: __main__.py  config_reader.py  constants.py  get_data.py  notify.py  print_console.py  setup_logger.py
src/cpn_generate_schemas/: cli_config.py
src/cpn_utils/: singleton.py
src/gcpn/: __init__.py  constants.py
src/generate_config_schema/: __init__.py  __main__.py
src/generate_schemas/: __init__.py  __main__.py  config.py  constants.py
src/modules/: config_reader.py
src/types/: config.py
(+164 files in other folders)
