[project]
authors = [
  { name = "KevinNitroG", email = "kevinnitro@duck.com" },
  { name = "NTGNguyen", email = 'ntgnguyen@duck.com' },
]
description = "Check phạt nguội"
name = "check-phat-nguoi"
version = "0.1.0-dev.1"
requires-python = ">=3.10"
dependencies = ["aiohttp[speedups]>=3.11.11", "pydantic>=2.10.4"]

[project.scripts]
check-phat-nguoi = "check_phat_nguoi:main"
generate-config-schema = "generate_schemas:generate_config_schema"
generate-schemas = "generate_schemas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
