[project]
authors = [
  { name = "KevinNitroG", email = "kevinnitro@duck.com" },
  { name = "NTGNguyen", email = 'ntgnguyen@duck.com' },
]
description = "Check phạt nguội"
name = "check-phat-nguoi"
version = "0.1.0-dev.1"
requires-python = ">=3.13"
dependencies = [
  "aiohttp[speedups]>=3.11.11",
  "beautifulsoup4>=4.12.3",
  "pydantic>=2.10.4",
  "pytesseract>=0.3.13",
  "truststore>=0.10.0",
]

[project.scripts]
check-phat-nguoi = "check_phat_nguoi:__main__.main"
generate-schemas = "generate_schemas:__main__.main"
generate-config-schema = "generate_schemas:generate_config_schema"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pre-commit>=4.0.1"]
build-website = ["json-schema-for-humans>=1.3.4", "mkdocs-material>=9.5.49"]
